--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/node": "22.7.7",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "9.13.0",
     "eslint-config-next": "15.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
   }
 }
